ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: python-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: python-app.tecnotree.com
    http:
      paths:
      - path: /api/details
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 5001
      - path: /api/host_details
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 5001
